--- a/css/master.css
+++ b/css/master.css
@@ -5,11 +5,8 @@
 @import url("footer.css");
 
 /* PAGES */
+@import url("main.css");
 @import url("home.css");
-@import url("events.css");
-@import url("exhibitions.css");
-@import url("visit.css");
-@import url("involved.css");
 @import url("about.css");
 
 /* FONT */
@@ -23,12 +20,19 @@
 #FFFFFF;  -  WHITE
 ------------------------------------------------------*/
 
+
+
+
+
+
+
 /* GLOBAL STYLES
 ------------------------------------------------------*/
 body{
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
+  background-color: rgb(240, 240, 240);
 }
 
 h1{
@@ -41,16 +45,14 @@ h1{
 h2{
   font-family: 'Jura', sans-serif;
   margin: 0;
-  padding: 10px 0 0 0;
+  padding: 0;
 }
 
-h3{
-  margin: 5px 0 0px 0;
-}
+
 
 p{
   margin: 0;
-  padding: 8px 0 10px 0;
+  padding: 0;
 }
 
 img{
@@ -61,18 +63,7 @@ main img{
   width: 100%;
 }
 
-main a{
-  text-decoration: none;
-  color: #FF003D;
-  border-bottom: 1.5px solid #FF003D;
-  font-weight: 600;
-  margin: 0 0 8px 0;
-  padding: 8px 0 2px 0;
-}
 
-main a:hover{
-  border-bottom: 0px solid #FFF;
-}
 
 .last-p{
   padding-bottom: 0;
@@ -119,7 +110,6 @@ main a:hover{
 
   h2{
     font-size: 30px;
-    padding: 12px 10px;
   }
 
   h3{
@@ -128,12 +118,10 @@ main a:hover{
 
   p{
     font-size: 17px;
-    padding: 0px 10px 15px 10px;
   }
 
   main a{
     font-size: 17px;
-    margin: 0 10px 15px 10px;
   }
 
   .tablet-images{
@@ -237,4 +225,67 @@ main a:hover{
   .laptop-images{
     display: none;
   }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.button{
+  background-color: transparent;
+  border: 1px solid #000;
+  padding: 20px 30px;
+  text-align: center;
+  text-decoration: none;
+  font-size: .6em;
+  transition: .5s;
+  text-transform: uppercase;
+}
+
+.button:hover{
+  background: rgb(122, 8, 36);
+  color: white;
+  border: 1px solid transparent;
+  padding: 20px 40px;
+  cursor: pointer;
+}
+
+.button--pink{
+  background-color: transparent;
+  border: 2px solid #FF003D;
+  color: #FF003D;
+  font-weight: 700;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1em;
+  transition: .5s;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.link{
+  text-decoration: none;
+}
+
+
+.button--pink:hover{
+  background-color: #FF003D;
+  color: #fff;
+  
+}
+
+.margin-bottom{
+  margin-bottom: 20px;
 }
