--- a/css/master.css
+++ b/css/master.css
@@ -28,8 +28,17 @@
 
 /* GLOBAL STYLES
 ------------------------------------------------------*/
+html{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body{
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   background-color: rgb(240, 240, 240);
@@ -120,9 +129,7 @@ main img{
     font-size: 17px;
   }
 
-  main a{
-    font-size: 17px;
-  }
+ 
 
   .tablet-images{
     display: none;
@@ -150,7 +157,7 @@ main img{
     font-size: 32px;
   }
 
-  p, main a{
+  p{
     font-size: 16px;
   }
 
@@ -180,7 +187,7 @@ main img{
     font-size: 35px;
   }
 
-  p, main a{
+  p{
     font-size: 17px;
   }
 
@@ -210,7 +217,7 @@ main img{
     font-size: 30px;
   }
 
-  p, main a{
+  p{
     font-size: 17px;
   }
 
@@ -244,20 +251,26 @@ main img{
 
 .button{
   background-color: transparent;
-  border: 1px solid #000;
+  border: 1.5px solid #000;
+  color: #000;
+  
   padding: 20px 30px;
   text-align: center;
   text-decoration: none;
-  font-size: .6em;
+  font-size: 1em;
   transition: .5s;
   text-transform: uppercase;
+  margin: 20px 0px 30px 0px;
+  font-weight: 600;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .button:hover{
-  background: rgb(122, 8, 36);
+  background: #FF003D;
   color: white;
-  border: 1px solid transparent;
-  padding: 20px 40px;
+  border: 1.5px solid transparent;
+  padding: 20px 50px;
   cursor: pointer;
 }
 
