--- a/css/home.css
+++ b/css/home.css
@@ -36,10 +36,6 @@
   grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
 }
 
-.section__block--cta{
-  
-}
-
 .section__img--cta{
   box-sizing: border-box;
   display: block;
@@ -51,56 +47,20 @@
 /* END OF CTA --------------------------------------- */
 
 
-
-/* GLOBAL STYLES
-------------------------------------------------------*/
-.home-grid-container{
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
-  display: grid;
-  grid-gap: 1em;
-  padding: 1.7em 1em 1em 1em;
-}
-
-.home-grid-container div > a{
-  color: #000;
-  text-decoration: none;
-  /* border-bottom: 1px solid #000; */
-}
-
-.home-grid-container div > a:hover{
-  border-bottom: 0px solid #000;
-}
-
-.home-grid-container > div{
-  margin: 25px 10px;
-}
-
-.home-grid-container div > h2{
-  font-weight: 900;
-  padding: 0 0 10px 0;
-  margin: 0;
-}
-
-
-
-.description{
+/* TEXT SECTION: ------------------------------------ */
+.section__block--description{
   text-align: center;
   color: #fff;
   margin-left: auto;
   margin-right: auto;
   max-width: 600px;
-  padding: 2em 1em;
+  padding: 30px 1em;
 }
-
-.description > p{
-  margin: 7px 0;
-}
+/* END OF TEXT SECTION ------------------------------ */
 
 
-/* MOBILE
-------------------------------------------------------*/
+
+/* MOBILE: -------------------------------------------*/
 @media only screen and (max-width: 480px){
   .header--home{
     background: url("../images/pages/home/test1.jpg");
@@ -124,25 +84,7 @@
     display: none;
   }
 
-
-
-  .home-grid-container{
-    grid-template-columns: 1;
-  }
-
-  .home-grid-container div > h2{
-    font-size: 22px;
-  }
-
-  .home-grid-container div > a{
-    font-size: 17px;
-  }
-
-  .home-grid-container > div{
-    margin: 0 0 25px 0;
-  }
-
-  #sub-headline{
+ .section__block__h2{
     font-size: 40px;
     margin: 10px 0px 15px 0;
     padding-left: 0;
@@ -156,7 +98,6 @@
   .header--home{
     background: url("../images/pages/home/test1.jpg");
   }
-
   
   .header__block{
     padding: 30px 10px;
@@ -176,25 +117,7 @@
     display: none;
   }
 
-
-
-
-
-
-  .home-grid-container{
-    grid-template-columns: 1fr 1fr;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-    height: 300px;
-    padding: 40px 10px 40px 10px;
-  }
-
-  .home-grid-container h2{
-    font-size: 26px;
-  }
-
-  #sub-headline{
+ .section__block__h2{
     font-size: 36px;
     margin: 10px 0px 15px 0;
   }
@@ -207,7 +130,7 @@
     background: url("../images/pages/home/test1.jpg");
   }
 
-  
+
   .header__block{
     padding: 40px 10px;
   }
@@ -226,26 +149,7 @@
     display: none;
   }
 
-
-
-
-
-  .home-grid-container{
-    grid-template-columns: 1fr 1fr;
-    max-width: 800px;
-    height: 300px;
-    padding: 50px 0 70px 0;
-  }
-
-  .home-grid-container h2{
-    font-size: 34px;
-  }
-
-  .home-grid-container a{
-    font-size: 26px;
-  }
-
-  #sub-headline{
+  .section__block__h2{
     font-size: 42px;
     margin: 10px 0px 20px 0;
   }
@@ -272,31 +176,11 @@
     padding: 50px 100px;
   }
 
-
-
-
-  .home-grid-container{
-    grid-template-columns: 1fr 1fr;
-    max-width: 800px;
-    height: 400px;
-    padding: 70px 0 50px 0;
-  }
-
-  .home-grid-container h2{
-    font-size: 35px;
-  }
-
-  .home-grid-container a{
-    font-size: 25px;
-  }
-
-
-  #sub-headline{
+  .section__block__h2{
     font-size: 45px;
     margin: 10px 0px 20px 0;
   }
 }
-
 
 
 .header{
