--- a/css/nav.css
+++ b/css/nav.css
@@ -1,38 +1,88 @@
-/* COLOUR PALETTE:
-#000000;  -  BLACK
-#0E0E0C;  -  DARK GREY
-#FF003D;  -  RED/PINK
-#FFFFFF;  -  WHITE
-------------------------------------------------------*/
-
-
-/* GLOBAL STYLES
-------------------------------------------------------*/
-nav{
+/* NAVIGATION BAR: ------------------------------ */
+.nav{
   background-color: #000;
-  z-index: 1000000;
-}
-
-.navigation{
-  position:sticky;
+  box-sizing: border-box;
+  position: sticky;
   position:-webkit-sticky;
   top: 0;
   text-align: right;
-  height: 60px;
-  line-height: 60px;
+  height: 100px;
+  line-height: 100px;
   margin: 0;
+  z-index: 999;
+}
+/* END OF NAVIGATION BAR ------------------------ */
+
+
+
+/* LOGO: ---------------------------------------- */
+.nav__img--logo img{
+  float: left;
+  height: 60px;
+  margin: 20px;
+}
+/* END OF LOGO ---------------------------------- */
+
+
+
+/* HAMBURGER/CROSS ICON: ------------------------ */
+.nav__block--hamburger-icon{
+  position: absolute;
+  width: 50px;
+  height: 40px;
+  top: 50%;
+  right: 0px;
+  transform: translate(-50% , -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transition: 1s;
 }
 
-.menu{
-  margin: 0 20px 0 0;
+.nav__block--hamburger-icon:hover{
+  cursor: pointer;
 }
 
-.menu a{
+.line-1{
+  width: 40px;
+  height: 5px;
+  background: #FFFFFF;
+  margin: 5px;
+  border-radius: 10px;
+  transition: .5s ease-in-out;
+}
+
+.line-2{
+  width: 40px;
+  height: 5px;
+  background: #FFFFFF;
+  margin: 5px;
+  border-radius: 10px;
+  transition: .5s ease-in-out;
+}
+
+.line-3{
+  width: 40px;
+  height: 5px;
+  background: #FFFFFF;
+  margin: 5px;
+  border-radius: 10px;
+  transition: .5s ease-in-out;
+}
+/* END OF HAMBURGER/CROSS ICON ------------------ */
+
+
+
+/* MENU: ---------------------------------------- */
+.nav__block--menu{
+  margin: 0em;
+}
+
+.nav__block--menu a{
   display: inline-block;
   text-decoration: none;
-  padding: 0 10px;
-  line-height: 60px;
+  padding: 0 20px;
+  line-height: 100px;
   color: #FFFFFF;
+  margin: 0;
 }
 
 #active{
@@ -41,106 +91,63 @@ nav{
   font-weight: 900;
 }
 
-.menu a:hover{
+.nav__block--menu a:hover{
   background: #FF003D;
   transition: .2s;
 }
 
-.menu a:active{
+.nav__block--menu a:active{
   background: #0E0E0C;
   transition: .1s;
 }
-
-#logo img{
-  float: left;
-  line-height: 60px;
-  height: 40px;
-  margin: 10px;
-}
-
-label{
-  margin: 0 40px 0 0;
-  font-size: 26px;
-  line-height: 60px;
-  display: none;
-  width: 26px;
-  float: right;
-  color: #FFFFFF;
-}
-
-#toggle{
-  display: none;
-}
+/* END OF MENU ---------------------------------- */
 
 
-/* NAVIGATION BREAKPOINT MOBILE/TABLET
+
+
+
+/* nav BREAKPOINT MOBILE/TABLET
 ------------------------------------------------------*/
-@media only screen and (max-width: 908px){
-  label{
+@media only screen and (max-width: 1128px){
+  .nav__block--menu{
+    text-align: left;
+    width: 300px;
+    height: 100% !important;
+    position: fixed;
+    right: -300px;
+    top: 100px;
+    background-color: rgba(0, 0, 0, 0.9) !important;
+    transition: 1s;
+    z-index: 1999999999999;
+  }
+  
+  .nav__block--menu a{
     display: block;
-    cursor: pointer;
-    font-size: 30px;
+    transition: .3s;
   }
 
-  .menu{
-    text-align: center;
-    width: 100%;
+  .nav__block--menu a:hover{
+    background: rgba(255, 0, 60, 0.9);
+    padding-left: 25px;
+  }
+
+  #active{
+    background: rgba(255, 0, 60, 0.9);
+    color: #000;
+    font-weight: 900;
+    padding-left: 25px;
+  }
+}
+
+
+/* nav BREAKPOINT FOR LAPTOP/DESKTOP
+------------------------------------------------------*/
+@media only screen and (min-width: 1129px){
+  .nav__block--hamburger-icon{
     display: none;
   }
 
-  #logo img{
-    height: 40px;
-    margin: 10px;
-  }
-
-  .menu a{
-    display: block;
-    background: #000000;
-    border-top: 1px solid #FFFFFF;
-    margin: 0;
-    padding: 0;
-  }
-
-  #toggle:checked + .menu{
-    display: block;
-    overflow: hidden;
-    position: relative;
-  }
-}
-/* NAVIGATION BREAKPOINT FOR TABLET
-------------------------------------------------------*/
-@media only screen and (min-width: 909px) and (max-width: 1025px){
-  .menu a{
-    font-size: 18px;
-    line-height: 70px;
-  }
-
-  .navigation{
-    height: 70px;
-    line-height: 70px;
-  }
-
-  #logo img{
-    height: 45px;
-    margin: 12.5px;
-  }
-}
-
-/* NAVIGATION BREAKPOINT FOR LAPTOP/DESKTOP
-------------------------------------------------------*/
-@media only screen and (min-width: 1026px){
-  .menu a{
+  .nav__block--menu a{
     font-size: 20px;
-    line-height: 80px;
-  }
-
-  .navigation{
-    height: 80px;
-    line-height: 80px;
-  }
-
-  #logo img{
-    height: 55px;
-    margin: 12.5px;
   }
 }
