--- a/css/home.css
+++ b/css/home.css
@@ -76,8 +76,15 @@
 
   .section--cta{
     grid-template-columns: 1fr;
-    grid-gap: 20px;
-    padding: 20px;
+    grid-gap: 40px;
+    padding: 50px 10px 20px 10px;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .section__block__h2--cta{
+    font-size: 24px;
   }
 
   .section__img--cta{
@@ -105,8 +112,13 @@
 
   .section--cta{
     grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
-    padding: 30px;
+    grid-gap: 50px;
+    padding: 60px 10px 30px 10px;
+    text-align: center;
+  }
+
+  .section__block__h2--cta{
+    font-size: 24px;
   }
 
   .section__img--cta{
@@ -132,8 +144,13 @@
 
   .section--cta{
     grid-template-columns: 1fr 1fr;
-    grid-gap: 40px;
-    padding: 50px;
+    grid-gap: 60px;
+    padding: 70px 10px 50px 10px;
+    text-align: center;
+  }
+
+  .section__block__h2--cta{
+    font-size: 30px;
   }
 
   .section__img--cta{
@@ -161,6 +178,11 @@
     grid-template-columns: 1fr;
     grid-gap: 50px;
     padding: 50px 100px;
+    text-align: start;
+  }
+
+  .section__block__h2--cta{
+    font-size: 30px;
   }
 
   .section__block__h2{
