--- a/css/home.css
+++ b/css/home.css
@@ -11,21 +11,29 @@
   background-position: center;
 }
 
-.header__block{
+.header__block--home{
   display: grid;
   align-self: center;
   justify-self: center;
   width: 100%;
-  padding: 40px 20px;
-  background: rgb(253, 253, 253, .8);
+  padding: 80px 20px;
+  background: rgb(253, 253, 253, .9);
   text-align: center;
   box-sizing: border-box;
 }
 
-.header__block__h1{
-  color: #000;
+.header__h1--home{
+  padding: 0;
+
+  color: #000 !important;
   font-size: 60px;
   box-sizing: border-box;
+}
+
+.header__h2--home{
+  padding-top: 15px;
+  font-weight: 300;
+  font-size: 18;
 }
 /* END OF HEADER ------------------------------------ */
 
@@ -33,20 +41,24 @@
 
 /* CTA: --------------------------------------------- */
 .section--cta{
-  background: #E5D7D6;
+  background: url("../images/test2.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: grid;
   position: relative;
   color: #000;
   grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  padding: 100px 0;
+}
+.section__block__h2--cta{
+  color: #FFF;
 }
 
-.section__img--cta{
-  box-sizing: border-box;
-  display: block;
-  height: 100%;
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
+.section__block--cta{
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.75);
+  padding: 80px 20px;
 }
 /* END OF CTA --------------------------------------- */
 
@@ -70,8 +82,8 @@
     padding: 30px 10px;
   }
 
-  .header__block__h1{
-    font-size: 35px;
+  .header__h1--home{
+    font-size: 35px !important;
   }
 
   .section--cta{
@@ -106,19 +118,19 @@
     padding: 30px 10px;
   }
 
-  .header__block__h1{
-    font-size: 45px;
+  .header__h1--home{
+    font-size: 45px !important;
   }
 
   .section--cta{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 50px;
+    grid-template-columns: 1fr;
+    grid-gap: 100px;
     padding: 60px 10px 30px 10px;
     text-align: center;
   }
 
   .section__block__h2--cta{
-    font-size: 24px;
+    font-size: 35px;
   }
 
   .section__img--cta{
@@ -138,14 +150,14 @@
     padding: 40px 10px;
   }
 
-  .header__block__h1{
-    font-size: 55px;
+  .header__h1--home{
+    font-size: 55px !important;
   }
 
   .section--cta{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 60px;
-    padding: 70px 10px 50px 10px;
+    padding: 100px 10px;
     text-align: center;
   }
 
@@ -170,19 +182,20 @@
     padding: 50px 10px;
   }
 
-  .header__block__h1{
-    font-size: 65px;
+  .header__h1--home{
+    font-size: 65px !important;
   }
 
   .section--cta{
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
-    padding: 50px 100px;
+    padding: 100px;
     text-align: start;
+    text-align: center;
   }
 
   .section__block__h2--cta{
-    font-size: 30px;
+    font-size: 35px;
   }
 
   .section__block__h2{
