--- a/css/master.css
+++ b/css/master.css
@@ -32,7 +32,7 @@ html, body{
 html, body,
 nav, header, main, footer,
 h1, h2, h3, h4, h5, h6,
-p, a, i, img, button, label,
+p, i, button, label,
 ul, li,
 span, div, section, article{
   margin: 0;
@@ -51,6 +51,8 @@ main img{
 
 a{
   cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 /* -------------------------------------------------- */
 
@@ -88,7 +90,7 @@ h2{
 }
 
 .margin-bottom{
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 /* -------------------------------------------------- */
 
@@ -124,7 +126,7 @@ h2{
   background: linear-gradient(150deg, rgb(255, 134, 63), rgb(255, 0, 60), rgb(134, 7, 70));
   border: 0px solid transparent;
   padding: 30px 60px;
-  margin-top: 40px;
+  margin-top: 45px;
   font-weight: 600;
   color: #FFF;
   letter-spacing: 5px;
@@ -142,20 +144,18 @@ h2{
 .button--fill--pink{
   background-color: rgba(255, 0, 60, 1);
   background: linear-gradient(150deg, rgb(255, 134, 63), rgb(231, 11, 62), rgb(170, 12, 91));
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
   border: 0px solid rgba(255, 0, 60, 1);
   color: #FFF;
   padding: 20px 30px;
   font-size: 1em;
-  margin: 20px 0px 0px 0px;
+  margin-top: 20px;
   font-weight: 600;
   letter-spacing: 3px;
 }
 
 .button--fill--pink:hover{
-  background: #FF003D;
-    background: linear-gradient(150deg, rgb(63, 255, 207), rgb(0, 153, 255), rgb(7, 41, 134));
-
+  background: linear-gradient(150deg, rgb(63, 255, 207), rgb(0, 153, 255), rgb(7, 41, 134));
   color: white;
   border: 0px solid transparent;
   padding: 20px 50px;
@@ -217,6 +217,15 @@ h2{
 
   .button--cta--header{
     font-size: 1.1em;
+    padding: 20px 30px;
+  }
+
+  .button--cta--header:hover{
+    padding: 20px 45px;
+  }
+
+  .button--fill--pink:hover{
+    padding: 20px 35px;
   }
 }
 
@@ -269,6 +278,10 @@ h2{
 
   .desktop-images{
     display: none;
+  }
+
+  .button--cta--header{
+    font-size: 1.4em;
   }
 }
 
