--- a/css/nav.css
+++ b/css/nav.css
@@ -12,15 +12,34 @@
   margin: 0;
   z-index: 999;
 }
+
+.nav__block{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-content: center;
+  height: 100px;
+  width: 100%;
+}
 /* END OF NAVIGATION BAR ------------------------ */
 
 
 
 /* LOGO: ---------------------------------------- */
+.nav__img--logo{
+  line-height: 100px;
+  display: grid;
+  align-content: center;
+}
+
 .nav__img--logo img{
-  float: left;
-  height: 60px;
-  margin: 20px;
+  
+  max-height: 60px;
+  margin: auto 20px;
+  cursor: pointer;
+}
+
+.nav__img--logo:hover{
+  cursor: pointer;
 }
 /* END OF LOGO ---------------------------------- */
 
@@ -28,14 +47,19 @@
 
 /* HAMBURGER/CROSS ICON: ------------------------ */
 .nav__block--hamburger-icon{
-  position: absolute;
+  
   width: 50px;
   height: 40px;
-  top: 50%;
-  right: 0px;
-  transform: translate(-50% , -50%);
-  -webkit-transform: translate(-50%, -50%);
+  
+  line-height: 100px;
   transition: 1s;
+
+  display: grid;
+  align-items: center;
+  text-align: end;
+  justify-self: flex-end;
+  margin-right: 20px;
+  box-sizing: border-box;
 }
 
 .nav__block--hamburger-icon:hover{
